# real-estate-listings

./: .dockerignore  .env.local  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Dockerfile  Dockerfile.postgres  README.md  alembic.ini  create_table.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  start.sh  test_db.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/utils/: triggers.py
alembic/versions/: 0d6473579283_add_updated_at_triggers.py  1110ebca936c_add_tags_tag_groups_and_property_tags.py  18f87ff57019_add_relationships_to_property_property_.py  1bf2566ebc02_add_server_default_for_photo_updated_at.py  244769102b62_refactor_property_remove_user_id.py  377965c51823_add_photos_public_id.py  3bc95735cbba_initial_tables.py  5bf46e6e4a62_update_property_and_add_address_model.py  5d97ffc5ddd2_upgrade unique constraint on addresses.py  643e9607d046_add_property_public_id.py  7e899b1a076d_add_user_profile.py  8337ae9e805f_add_photos_table.py  90213a45fda6_add_deleted_at_for_soft_delete.py  e1c8a94c0aae_fix_tag_groups.py
app/: main.py
app/api/: photo_controller.py
app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  oauth2.py  queue.py  security.py
app/enums/: photo_enum.py
app/jobs/: enqueue.py  photo_job.py
app/models/: address_model.py  photo_model.py  property_model.py  (+4 more)
db-init/: 01-setup-env.sh
db-templates/: 02-create-db-template.sql
scripts-dev/: lint.py
tests/: conftest.py  settings.py
(+206 files in other folders)
