[project]
requires-python = ">=3.13"

[tool.pylint.main]
ignore = ["venv"]
jobs = 1

[tool.pylint."messages control"]
disable = [
  "C0114",
  "C0115",
  "C0116",
  "R0903"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.reports]
reports = false

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = ["E203"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
